--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "sakai-vue",
-	"version": "3.4.2-SNAPSHOT",
+	"name": "midas-app",
+	"version": "1.1.0-midas",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/primefaces/sakai-vue.git"
@@ -25,6 +25,7 @@
 		"sass-loader": "^8.0.2"
 	},
 	"dependencies": {
+		"@vuepic/vue-datepicker": "^3.4.8",
 		"axios": "^0.27.2",
 		"bulma-toast": "^2.4.1",
 		"chart.js": "3.3.2",
