--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"sass-loader": "^8.0.2"
 	},
 	"dependencies": {
+		"@kyvg/vue3-notification": "^2.4.1",
 		"axios": "^0.27.2",
 		"bulma-toast": "^2.4.1",
 		"chart.js": "3.3.2",
