--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"bulma-toast": "^2.4.1",
 		"chart.js": "3.3.2",
 		"core-js": "^3.6.5",
+		"date-fns": "^2.29.3",
 		"primeflex": "^3.1.2",
 		"primeicons": "^5.0.0",
 		"primevue": "^3.12.2",
